// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`balance should display well 1`] = `
<div>
  <span>
    0.0{6}1808
  </span>
</div>
`;

exports[`bignumber should be transform automatically 1`] = `
<div>
  <span>
    3368437500000000.00
  </span>
</div>
`;

exports[`if interger part great than 1, decimal part should have 2 decimals 1`] = `
<div>
  <span>
    3.15
  </span>
</div>
`;

exports[`if interger part great than 1, decimal part should round into 4 decimals 1`] = `
<div>
  <span>
    0.1424
  </span>
</div>
`;

exports[`if interger part less than 1, decimal part should have 4 decimals 1`] = `
<div>
  <span>
    0.1450
  </span>
</div>
`;

exports[`integer should be append two zero to tail 1`] = `
<div>
  <span>
    3.00
  </span>
</div>
`;

exports[`should throw error if text is not string 1`] = `"text should be string"`;
